--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Site Properties -->
   <title>Sticky Example - Semantic</title>
 
-  <link rel="stylesheet" type="text/css" href="http://oss.maxcdn.com/semantic-ui/2.1.8/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="dist/semantic-ui/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="index.css">
 
 </head>
@@ -96,7 +96,7 @@
   <script src="http://oss.maxcdn.com/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://code.angularjs.org/1.5.0//angular.min.js"></script>
   <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
-  <script src="http://oss.maxcdn.com/semantic-ui/2.1.8/semantic.min.js"></script>
+  <script src="dist/semantic-ui/semantic.min.js"></script>
 
 
   <script src="app/app.module.js"></script>
