--- a/index.html
+++ b/index.html
@@ -20,33 +20,15 @@
   <div class="ui inverted blue main menu">
     <div class="ui text container">
       <div href="#" class="header item">
-        Project Name
+        Paul Dhillon
       </div>
-      <a href="#" class="item">Blog</a>
-      <a href="#" class="item">Articles</a>
-      <a href="#" class="ui right floated dropdown item">
-        Dropdown <i class="dropdown icon"></i>
-        <div class="menu">
-          <div class="item">Link Item</div>
-          <div class="item">Link Item</div>
-          <div class="divider"></div>
-          <div class="header">Header Item</div>
-          <div class="item">
-            <i class="dropdown icon"></i>
-            Sub Menu
-            <div class="menu">
-              <div class="item">Link Item</div>
-              <div class="item">Link Item</div>
-            </div>
-          </div>
-          <div class="item">Link Item</div>
-        </div>
-      </a>
+      <a href="#/" class="item">About</a>
+      <a href="#/consulting" class="item">Consulting</a>
+      <a href="#/practical-startpage" class="item">Practical Startpage</a>
     </div>
   </div>
 
-  <div class="ui text container">
-    <ng-view></ng-view>
+  <div class="ui text container" ng-view>
   </div>
 
   <div class="ui inverted vertical footer segment">
@@ -101,7 +83,7 @@
 
   <script src="app/app.module.js"></script>
   <script src="index.js"></script>
-  
+
   <!--Load Last-->
   <script src="app/googleAnalytics.js"></script>
 
