--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properties -->
-  <title>Sticky Example - Semantic</title>
+  <title>PD75</title>
 
   <link rel="stylesheet" type="text/css" href="dist/semantic-ui/dist/semantic.min.css">
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="app/index/index.css">
 
 </head>
 
-<body ng-app="app">
+<body ng-app="app" pd-index>
   <img class="top image" src="img/page_header.jpg" />
-  <div class="ui inverted blue main menu">
+  <div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">
     <div class="ui text container">
       <div href="#" class="header item">
         Paul Dhillon
       </div>
-      <a href="#/" class="item">About</a>
+      <a href="#/" class="item">{{vm.menuVisibility.type}} About</a>
       <a href="#/consulting" class="item">Consulting</a>
       <a href="#/practical-startpage" class="item">Practical Startpage</a>
     </div>
@@ -80,9 +80,13 @@
   <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
   <script src="dist/semantic-ui/dist/semantic.min.js"></script>
 
+  <script src="distDev/ui-angular/src/ui.module.js"></script>
+  <script src="distDev/ui-angular/src/behaviours/visibility.js"></script>
+  <script src="distDev/ui-angular/src/modules/sticky.js"></script>
+  <!--<script src="distDev/ui-angular/src/modules/ui.module.js"></script>-->
 
   <script src="app/app.module.js"></script>
-  <script src="index.js"></script>
+  <script src="app/index/index.js"></script>
 
   <!--Load Last-->
   <script src="app/googleAnalytics.js"></script>
