--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div href="#" class="header item">
         Paul Dhillon
       </div>
-      <a href="#/" class="item">{{vm.menuVisibility.type}} About</a>
+      <a href="#/" class="item">About</a>
       <a href="#/consulting" class="item">Consulting</a>
       <a href="#/practical-startpage" class="item">Practical Startpage</a>
     </div>
@@ -87,6 +87,10 @@
 
   <script src="app/app.module.js"></script>
   <script src="app/index/index.js"></script>
+  
+  <script src="app/practical-startpage/ps.widgets.js"></script>
+  <script src="app/practical-startpage/ps.service.js"></script>
+  <script src="app/practical-startpage/practical-startpage.js"></script>
 
   <!--Load Last-->
   <script src="app/googleAnalytics.js"></script>
