--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -1,19 +1,19 @@
 <div class="ui segment" ui-sticky-context="vm.stickyContext">
   <div class="left ui rail">
     <div class="ui sticky vertical right floated labeled icon menu" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext">
-        <a class="item">
-          <i class="info icon"></i> About
-        </a>
-        <a class="item">
-          <i class="help icon"></i> Help
-        </a>
-        <a class="item">
-          <i class="thumbs up icon"></i> Credits
-        </a>
+      <a class="item">
+        <i class="info icon"></i> About
+      </a>
+      <a class="item">
+        <i class="help icon"></i> Help
+      </a>
+      <a class="item">
+        <i class="thumbs up icon"></i> Credits
+      </a>
     </div>
   </div>
   <div class="row">
-    <img class="ui centered image" src="img/webstore_128px_icon.png" />
+    <img class="ui centered image" src="img/icon128.png" />
     <h1 class="ui center aligned header">Practical Startpage</h1>
   </div>
   <div class="row">
@@ -47,10 +47,10 @@
   <div class="row">
     <h2 class="ui center aligned header">Help</h2>
 
-    <h3 class="ui center aligned header">Widgets</h3>
+    <!--<h3 class="ui center aligned header">Widgets</h3>-->
     <div class="ui list">
       <div class="item" ng-repeat="item in vm.widgets">
-        <i class="big icon" ng-class="item.icon"></i>
+        <i class="large icon" ng-class="item.icon"></i>
         <div class="content">
           <div class="header">{{item.title}}</div>
           <div class="description" ng-bind-html="item.html"></div>
@@ -60,6 +60,30 @@
   </div>
   <div class="row">
     <h2 class="ui center aligned header">Credits</h2>
-    <h3 class="ui center aligned header">Libraries Used</h3>
+    <!--<h3 class="ui center aligned header">Libraries Used</h3>-->
+    <div class="ui list">
+      <a class="item" href="http://semantic-ui.com/">
+        <img class="ui tiny image" src="img/logo-semantic-ui.png" />
+      </a>
+      <a class="item" href="https://angularjs.org/">
+        <img class="ui tiny image" src="img/logo-AngularJS.png" />
+      </a>
+      <a class="item" href="http://jquery.com/">
+        <img class="ui tiny image" src="img/jquery-mark-dark.gif" />
+      </a>
+      <a class="item" href="http://www.jstree.com/">
+        <img class="ui tiny image" src="img/logo-jsTree.png" />
+      </a>
+      <a class="item" href="https://github.com/ezraroi/ngJsTree">
+        <div class="content">
+          <div class="header">ngJsTree</div>
+        </div>
+      </a>
+      <a class="item" href="https://github.com/marceljuenemann/angular-drag-and-drop-lists">
+        <div class="content">
+          <div class="header">angular-drag-and-drop-lists</div>
+        </div>
+      </a>
+    </div>
   </div>
 </div>
