--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <!-- Site Properties -->
   <title>PD75</title>
+    <link rel="icon" type="image/png" href="img/favicon.ico">
 
   <link rel="stylesheet" type="text/css" href="dist/semantic-ui/dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="app/index/index.css">
