--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Site Properties -->
   <title>PD75</title>
-    <link rel="icon" type="image/png" href="img/favicon.ico">
+  <link rel="icon" type="image/png" href="img/favicon.ico">
 
   <link rel="stylesheet" type="text/css" href="dist/semantic-ui/dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="app/index/index.css">
@@ -23,9 +23,9 @@
       <div href="#" class="header item">
         Paul Dhillon
       </div>
-      <a href="#/" class="item">About</a>
-      <a href="#/consulting" class="item">Consulting</a>
-      <a href="#/practical-startpage" class="item">Practical Startpage</a>
+      <a href="#/" class="item" ng-class="{active:vm.isActive('/')}">About</a>
+      <a href="#/consulting" class="item" ng-class="{active:vm.isActive('/consulting')}">Consulting</a>
+      <a href="#/practical-startpage" class="item" ng-class="{active:vm.isActive('/practical-startpage')}">Practical Startpage</a>
     </div>
   </div>
 
@@ -88,7 +88,7 @@
 
   <script src="app/app.module.js"></script>
   <script src="app/index/index.js"></script>
-  
+
   <script src="app/practical-startpage/ps.widgets.js"></script>
   <script src="app/practical-startpage/ps.service.js"></script>
   <script src="app/practical-startpage/practical-startpage.js"></script>
@@ -96,6 +96,9 @@
   <!--Load Last-->
   <script src="app/googleAnalytics.js"></script>
 
+
+  <!-- Place this tag right after the last button or just before your close body tag. -->
+  <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
