ps-uninstall form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <a href="#/consulting" class="item" ng-class="{active:vm.isActive('/consulting')}">Consulting</a>
       <a href="#/practical-startpage" class="item" ng-class="{active:vm.isActive('/practical-startpage')}">Practical Startpage</a>
       <a href="#/ui-angular" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>
+      <a href="#/ps-uninstall" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>
     </div>
   </div>
 
@@ -82,6 +83,8 @@
   <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
   <script src="dist/semantic-ui/dist/semantic.min.js"></script>
 
+  <script src="dist/detect.min.js"></script>
+
   <script src="dist/ui-angular.min.js"></script>
   <!--<script src="distDev/ui-angular/src/ui.module.js"></script>-->
   <!--<script src="distDev/ui-angular/src/behaviours/visibility.js"></script>-->
@@ -96,7 +99,9 @@
 
   <script src="app/practical-startpage/ps.widgets.js"></script>
   <script src="app/practical-startpage/ps.service.js"></script>
+  <script src="app/practical-startpage/ps-uninstall.js"></script>
   <script src="app/practical-startpage/practical-startpage.js"></script>
+  <script src="app/ui-angular/ui-angular.js"></script>
 
   <!--Load Last-->
   <script src="app/googleAnalytics.js"></script>
