added sending survey to aws

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
   <script src="dist/angulartics.min.js"></script>
 
   <script src="app/app.module.js"></script>
+  <script src="app/services/aws.services.js"></script>
   <script src="app/index/index.js"></script>
 
   <script src="app/practical-startpage/ps.widgets.js"></script>
