--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         Paul Dhillon
       </div>-->
       <a href="#/" class="item" ng-class="{active:vm.isActive('/')}">Home</a>
-      <a href="#/consulting" class="item" ng-class="{active:vm.isActive('/consulting')}">Consulting</a>
+      <!--<a href="#/consulting" class="item" ng-class="{active:vm.isActive('/consulting')}">Consulting</a>-->
       <a href="#/practical-startpage" class="item" ng-class="{active:vm.isActive('/practical-startpage')}">Practical Startpage</a>
       <a href="#/ui-angular" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>
-      <a href="#/ps-uninstall" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>
+      <!--<a href="#/ps-uninstall" class="item" ng-class="{active:vm.isActive('/ui-angular')}">Uninstall</a>-->
     </div>
   </div>
 
@@ -109,7 +109,7 @@
 
 
   <!-- Place this tag right after the last button or just before your close body tag. -->
-  <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+  <!--<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>-->
 </body>
 
 </html>
