--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -12,7 +12,7 @@
       </a>
     </div>
   </div>
-  
+
   <!--<div class="right ui rail">
     <div class="ui sticky vertical left floated menu" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext">
       <div class="item" ng-href="{{vm.url}}#about" ng-class="{active:vm.isActive('about')}">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>-->
-  
+
   <div class="anchor" id="about"></div>
   <div class="row">
     <img class="ui centered image" src="img/icon128.png" />
@@ -104,7 +104,5 @@
       </a>
     </div>
   </div>
-  <div class="ui modal">
-    
-    </div>
+  <ui-modal ui-modal-show="vm.showModal" ui-modal-url="vm.modalUrl"></ui-modal>
 </div>
