--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
+  <meta name="google-site-verification" content="trkwsKu5OdADjjH5WsRC94ptcoMbEOLz5IQgbr-QUfI" />
   <!-- Site Properties -->
   <title>PD75</title>
 
@@ -101,20 +101,9 @@
   <script src="app/ui-angular/ui-angular.js"></script>
 
   <!--Load Last-->
-  <script src="app/googleAnalytics.js"></script>
+  <script src="app/scripts.js"></script>
 
-  <div id="fb-root"></div>
-  <script>
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s);
-      js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
 
-  </script>
 
   <!-- Place this tag right after the last button or just before your close body tag. -->
   <!--<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>-->
