--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -12,28 +12,9 @@
       </a>
     </div>
   </div>
-
-  <div class="right ui rail">
-    <div class="ui sticky vertical floated labeled icon menu" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext">
-      <!--<div class="item">
-        <div class="g-plusone" data-href="https://chrome.google.com/webstore/detail/practical-startpage/ikjalccfdoghanieehppljppanjlmkcf"></div>
-      </div>-->
-      <a class="item" ng-href="https://chrome.google.com/webstore/detail/practical-startpage/ikjalccfdoghanieehppljppanjlmkcf/reviews" target="_blank">
-        <i class="star icon"></i>Rate
-      </a>
-      <a class="item" ng-href="https://groups.google.com/forum/#!newtopic/practical-startpage" target="_blank">
-        <i class="bug icon"></i>Bugs
-      </a>
-      <a class="item" ng-href="https://github.com/PD75/practical-startpage" target="_blank">
-        <i class="github icon"></i>GitHub
-      </a>
-    </div>
-  </div>
-
-  <div class="anchor" id="about"></div>
-  <div class="row">
-    <img class="ui centered image" src="img/icon128.png" />
-    <h1 class="ui center aligned header">Practical Startpage</h1>
+  <div itemscope itemtype="http://schema.org/SoftwareApplication" class="row">
+    <img itemprop="image" class="ui centered image" src="img/icon128.png" />
+    <h1 itemprop="name" class="ui center aligned header">Practical Startpage</h1>
   </div>
   <div class="row">
     <div class="ui fitted  divider"></div>
@@ -52,8 +33,13 @@
       <div google-plus="vm.like.url" class="item"></div>
     </div>
     <div class="ui fitted divider"></div>
+  </div>
+  <div class="anchor" id="about"></div>
+  <div class="row">
+    <br>
+    <h2 class="ui center aligned header">About</h2>
     <p>
-      Practical Startpage is a simple yet powerful, allowing easy access to browser data, such as bookmarks and history.
+      Practical Startpage is a simple yet powerful extensions for google chrome, allowing easy access to browser data, such as bookmarks and history.
     </p>
     <ul>
       <li>
@@ -78,9 +64,36 @@
         RSS Feed for e.g. news
       </li>
     </ul>
+    <div class="ui divider"></div>
+
+    <div class="ui stackable equal width grid">
+      <div class="column">
+        <a class="blue fluid ui button" href="https://chrome.google.com/webstore/detail/practical-startpage/ikjalccfdoghanieehppljppanjlmkcf/reviews" target="_blank">
+          <i class="yellow star icon"></i>Rate
+        </a>
+      </div>
+
+      <div class="column">
+        <a class="red fluid ui button" href="https://groups.google.com/forum/#!newtopic/practical-startpage" target="_blank">
+          <i class="bug icon"></i>Bugs
+        </a>
+      </div>
+      <div class="column">
+        <a class="fluid ui button" href="https://github.com/PD75/practical-startpage" target="_blank">
+          <i class="black github icon"></i>Contribute
+        </a>
+      </div>
+      <div class="column">
+        <button class="purple fluid ui button" ng-click="vm.install()">
+          <i class="plus icon"></i>Install
+        </button>
+      </div>
+    </div>
+    <div class="ui  divider"></div>
   </div>
   <div class="anchor" id="help"></div>
   <div class="row">
+    <br>
     <h2 class="ui center aligned header">Help</h2>
 
     <!--<h3 class="ui center aligned header">Widgets</h3>-->
