--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
   <link rel="stylesheet" type="text/css" href="dist/angular-socialshare.css">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/ikjalccfdoghanieehppljppanjlmkcf">
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/github.min.css">-->
 
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">-->
 </head>
@@ -80,8 +79,9 @@
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>-->
 
   <script src="dist/ui-angular.min.js"></script>
-  <script src="/dist/angular-socialshare.js"></script>
-  <script src="/dist/angulike.js"></script>
+  <script src="dist/angular-socialshare.js"></script>
+  <script src="dist/angulike.js"></script>
+  <script src="dist/detect.min.js"></script>
 
 
   <script src="https://platform.twitter.com/widgets.js"></script>
